# jaspr-ai

./: .env  LICENSE  README.md  cli.py  documentation.md  pyproject.toml  requirements.txt
a_portfolio_site/: pubspec.yaml
a_portfolio_site/lib/: app.dart  main.dart
a_portfolio_site/lib/components/: footer.dart  header.dart
a_portfolio_site/lib/pages/: home_page.dart  projects_page.dart
a_portfolio_site/web/: index.html  main.css  tailwind.css
jaspr_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
