[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jaspr-cli"
version = "0.1.0"
dependencies = [
    "typer",
    "google-generativeai",
    "jinja2",
    "rich",
    "python-dotenv"
]

[project.scripts]
jasprai = "cli:main"

[tool.setuptools]
py-modules = ["cli", "ai", "generator", "prompts", "previews.preview"]

[tool.setuptools.packages.find]
exclude = ["a_portfolio_site*", "previews*"]
